fixed modal overflow-x

--- a/src/styles/Modal.css
+++ b/src/styles/Modal.css
@@ -8,7 +8,7 @@
   z-index: 100;
   color: black;
   border-radius: 7px;
-  /* overflow: hidden; */
+  overflow-x: hidden;
   max-height: calc(100vh - 5rem);
   overflow-y: auto;
   box-shadow: -1px 2px 13px 3px #12b886;
